[gd_scene load_steps=2 format=3 uid="uid://cpef8jng0prf7"]

[ext_resource type="Script" uid="uid://bb8c2x1qnbo23" path="res://scenes/messager/messager.gd" id="1_7i6lk"]

[node name="Messager" type="CanvasLayer"]
script = ExtResource("1_7i6lk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Rect" type="ColorRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="CornerLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -135.0
offset_top = -30.0
offset_right = -11.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
text = "press 'R' To reset "

[node name="MainVbox" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="MainLabel" type="Label" parent="Control/MainVbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "you died"
horizontal_alignment = 1

[node name="SubLabel" type="Label" parent="Control/MainVbox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "R To reset "
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true
